feat: integrar Sentry para monitoreo y captura de errores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Sentry
+sentry.dsn=https://83e525c17936c7e3fed8da2c4f2d97a2@o4510223800336384.ingest.us.sentry.io/4510223807021056
+sentry.traces-sample-rate=1.0
