--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry-spring-boot-starter</artifactId>
+            <version>6.1.2</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
