feat: Mejoras en Develop: Integración de New Relic APM y PostgreSQL

--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
 			<scope>test</scope>
 		</dependency>
         <dependency>
-            <groupId>io.sentry</groupId>
-            <artifactId>sentry-spring-boot-starter</artifactId>
-            <version>6.1.2</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
