--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,33 @@
-version: "3.9"
-
 services:
-  stockmanager:
+  postgres:
+    image: postgres:16
+    container_name: stockmanager-db
+    environment:
+      POSTGRES_USER: ${SPRING_DATASOURCE_USERNAME}
+      POSTGRES_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      POSTGRES_DB: stockmanager
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U stockmanager"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  app:
     build: .
     container_name: stockmanager
     ports:
-      - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=dev
+      - "${SERVER_PORT:-8080}:8080"
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
