--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,2 @@
 spring.application.name=stockManager
-spring.datasource.url=jdbc:h2:mem:stockdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# Sentry
-sentry.dsn=https://83e525c17936c7e3fed8da2c4f2d97a2@o4510223800336384.ingest.us.sentry.io/4510223807021056
-sentry.traces-sample-rate=1.0
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
