--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,2 @@
 spring.application.name=stockManager
-spring.datasource.url=jdbc:h2:mem:stockdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
